# tui_writer

./: .gitignore  CNAME  GEMINI.md  README.md  ai.html  ai.html.md  cli.html  cli.html.md  config.html  config.html.md  getting_started.html  getting_started.html.md  index.html  index.md  live.html  live.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  styles.css  tui.html  tui.html.md
.github/workflows/: deploy.yaml  test.yaml
nbs/: 00_cli.ipynb  01_ai.ipynb  01_ai_edit.ipynb  01_audio.ipynb  01_config.ipynb  02_live.ipynb  02_transcription.ipynb  03_live.ipynb  03_utils.ipynb  04_transcription.ipynb  04_tui.ipynb  05_tui.ipynb  06_utils.ipynb  07_ai_test.ipynb  _quarto.yml  custom.scss  getting_started.ipynb  index.ipynb  nbdev.yml  sidebar.yml  tui_template.ipynb
site_libs/bootstrap/: bootstrap-2eb1021dfeeaed9502868759e4fb33d2.min.css
tui_writer/: _modidx.py  ai.py  audio.py  cli.py  config.py  live.py  transcription.py  tui.py  tui_template.py  utils.py
