[project]
name="tui_writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "nbdev>=2.4.5",
    "textual>=6.1.0",
    "textual-dev>=1.7.0",
    "click",
    "sounddevice",
    "torch>=2.9,<3.0",
    "torchaudio>=2.9,<3.0",
    "faster_whisper",
    "rich",
    "pyperclip",
    "pyaudio",
    "numpy",
    "typer>=0.19.2",
    "smolagents[openai]",
    "fastrtc>=0.0.33",
    "litellm",
    "lisette"
]

[project.scripts]

tui_writer = "tui_writer.cli:tui"

[tool.uv]
package = true
dev-dependencies = [
    "jupyterlab",
    "ipykernel"
]

