[project]
name="tui_writer"
version = "0.1.1"
description = "A TUI that you run to transcribe and edit text. It's like a companion that dictates for you, engaging in a dialogue to collaboratively update a block of text rather than performing a direct transcription."
readme = "README.md"
requires-python=">=3.10"
dependencies = [
    "textual>=6.1.0",
    "textual-dev>=1.7.0",
    "click",
    "sounddevice",
    "torch>=2.9,<3.0",
    "torchaudio>=2.9,<3.0",
    "faster_whisper",
    "rich",
    "pyperclip",
    "pyaudio",
    "numpy",
    "lisette",
    "typer>=0.19.2",
    "smolagents[openai]",
    "fastrtc>=0.0.33",
    "litellm"
]

[project.scripts]
tui_writer = "tui_writer.cli:tui"

[tool.uv]
package = true
dev-dependencies = [
    "nbdev>=2.4.5",
    "jupyterlab",
    "ipykernel"
]

